:recycle: active 파일 코드 리팩토링 & 코드 구조 개선

--- a/active/active.html
+++ b/active/active.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./active.css" />
     <link rel="stylesheet" href="../main/style.css">
 </head>
-
-<body>
-
+<div class="wrapper">
     <header>
         <div class="logo">
-            <img src="../image/logo.png" alt="" />
+            <a href="./index.html">
+                <img src="../image/logo.png" alt="" />
+            </a>
         </div>
         <div class="menu">
             <ul>
@@ -33,106 +33,105 @@
             </ul>
         </div>
     </header>
-    <!-- header end -->
-    <nav class="side-bar">
-        <div class="left"></div>
-        <div class="center">
-            <div class="wrapper">
-                <div class="container">
-                    <div class="github img-list">
-                        <img src="../image/github.png" alt="" />
-                        <div class="text">
-                            <p class="title">git & github</p>
-                            <p class="desc">실무에서 쓰이는 개발 플랫폼인 git & github를 <br />과제 및 프로젝트에서 사용하여 능숙하게 다룬다</p>
-                        </div>
-                    </div>
-                    <!-- github end1 -->
-                    <div class="jandi img-list">
-                        <div class="images">
-                            <a href="https://github.com/HalamLee">
-                                <img src="https://ghchart.rshah.org/219138/halamlee" alt="halamlee's Github chart" />
-                            </a>
-                            <a href="https://github.com/blooper20">
-                                <img src="https://ghchart.rshah.org/219138/blooper20" alt="blooper20's Github chart" />
-                            </a>
-                            <a href="https://github.com/overtae">
-                                <img src="https://ghchart.rshah.org/219138/overtae" alt="blooper20's Github chart" />
-                            </a>
-                        </div>
-                        <div class="text">
-                            <p class="title">1day 1 commit</p>
-                            <p class="desc">도태되지 않고 꾸준히 성장하기 위해 Github Commit 관리를 합니다</p>
-                        </div>
-                    </div>
-                    <!-- jandi end2 -->
-                    <div class="flask img-list">
-                        <img src="../image/flask.png" alt="" />
-                        <div class="text">
-                            <p class="title">Flask Study</p>
-                            <p class="desc">API 구현과 DB 생성을 공부한 후 기술 블로그에 작성하여 과제로 깃허브 이슈로 제출합니다</p>
-                        </div>
-                    </div>
-                    <!-- seminar end3 -->
-                </div>
-                <!-- container1 end -->
-                <div class="container">
-                    <div class="coding-test img-list">
-                        <img src="../image/coding-test.png" alt="" />
-                        <div class="text">
-                            <p class="title">coding test</p>
-                            <p class="desc">파이썬을 처음 겪어본 사람과 경험해 본 사람 레벨을 나누어서 스터디를 진행합니다</p>
-                        </div>
-                    </div>
-                    <!-- coding-test end4 -->
-                    <div class="seminar img-list">
-                        <img src="../image/seminar.png" alt="" />
-                        <div class="text">
-                            <p class="title">html & css seminar</p>
-                            <p class="desc">방학 동안 html & css를 게더타운을 통해서 사용 방법을 배우고 과제를 제출합니다</p>
-                        </div>
-                    </div>
-                    <!-- flask end5 -->
-                    <div class="js img-list">
-                        <img src="../image/js.png" alt="" />
-                        <div class="text">
-                            <p class="title">JavaScript Study</p>
-                            <p class="desc">모던 자바스크립트 딥 다이브 교재를 통해 일주일에 한 챕터씩 기술 블로그에 작성 후 깃허브 이슈로 제출합니다</p>
-                        </div>
-                    </div>
-                    <!-- js end6 -->
-                </div>
-                <!-- container2 end -->
-                <div class="container">
-                    <div class="swift img-list">
-                        <img src="../image/swift.png" alt="" />
-                        <div class="text">
-                            <p class="title">Swift Study</p>
-                            <p class="desc">깃허브 이슈에 있는 과제를 공부 후 기술 블로그에 작성하여 제출합니다</p>
-                        </div>
-                    </div>
-                    <!-- swift end7 -->
-                    <div class="project img-list">
-                        <img src="../image/project.png" alt="" />
-                        <div class="text">
-                            <p class="title">창업대전</p>
-                            <p class="desc">2, 3학년은 각 팀을 이뤄 프로젝트 진행하면서 github를 통해 협업을 진행합니다</p>
-                        </div>
-                    </div>
-                    <!-- project end8 -->
-                    <div class="gather img-list">
-                        <img src="../image/gather.png" alt="" />
-                        <div class="text">
-                            <p class="title">GatherTown</p>
-                            <p class="desc">온라인 메타버스를 통해 함께 공부합니다</p>
-                        </div>
-                    </div>
-                    <!-- project end9 -->
-                </div>
-                <!-- container3 end -->
+</div>
+<!-- wrapper end -->
+<div class="cover">
+    <div class="container">
+        <div class="gather img-list">
+            <div class="activeImg"><img src="../image/gather.png" alt="" /></div>
+            <div class="text">
+                <p class="title">GatherTown</p>
+                <p class="desc">온라인 메타버스를 통해 함께 공부합니다</p>
             </div>
         </div>
-        <div class="right"></div>
-    </nav>
+        <!--  gather end1 -->
+        <div class="project img-list">
+            <div class="activeImg"><img src="../image/project.png" alt="" /></div>
+            <div class="text">
+                <p class="title">창업대전</p>
+                <p class="desc">2, 3학년은 각 팀을 이뤄 프로젝트 진행하면서 github를 통해 협업을 진행합니다</p>
+            </div>
+        </div>
+        <!-- project end2 -->
+        <div class="seminar img-list">
+            <div class="activeImg"><img src="../image/seminar.png" alt="" /></div>
+            <div class="text">
+                <p class="title">html & css seminar</p>
+                <p class="desc">방학 동안 html & css를 게더타운을 통해서 사용 방법을 배우고 과제를 제출합니다</p>
+            </div>
+        </div>
+        <!-- seminar end3 -->
+    </div>
+    <!-- container1 end -->
+    <div class="container">
+        <div class="github img-list">
+            <div class="activeImg"><img src="../image/github.png" alt="" /></div>
+            <div class="text">
+                <p class="title">git & github</p>
+                <p class="desc">실무에서 쓰이는 개발 플랫폼인 git & github를 <br />과제 및 프로젝트에서 사용하여 능숙하게 다룬다</p>
+            </div>
+        </div>
+        <!-- github end4 -->
+        <div class="jandi img-list">
+            <div class="activeImg">
+                <div class="images">
+                    <a href="https://github.com/HalamLee">
+                        <img src="https://ghchart.rshah.org/219138/halamlee" alt="halamlee's Github chart" />
+                    </a>
+                    <a href="https://github.com/blooper20">
+                        <img src="https://ghchart.rshah.org/219138/blooper20" alt="blooper20's Github chart" />
+                    </a>
+                    <a href="https://github.com/overtae">
+                        <img src="https://ghchart.rshah.org/219138/overtae" alt="blooper20's Github chart" />
+                    </a>
+                </div>
+            </div>
+            <div class="text">
+                <p class="title">1day 1 commit</p>
+                <p class="desc">도태되지 않고 꾸준히 성장하기 위해 Github Commit 관리를 합니다</p>
+            </div>
+        </div>
+        <!-- commit end5 -->
+        <div class="coding-test img-list">
+            <div class="activeImg"><img src="../image/coding-test.png" alt="" /></div>
+            <div class="text">
+                <p class="title">coding test</p>
+                <p class="desc">파이썬을 처음 겪어본 사람과 경험해 본 사람 레벨을 나누어서 스터디를 진행합니다</p>
+            </div>
+        </div>
+        <!-- coding-test end6 -->
+    </div>
+    <!-- container2 end -->
+    <div class="container">
+
+        <div class="flask img-list">
+            <div class="activeImg"><img src="../image/flask.png" alt="" /></div>
+            <div class="text">
+                <p class="title">Flask Study</p>
+                <p class="desc">API 구현과 DB 생성을 공부한 후 기술 블로그에 작성하여 과제로 깃허브 이슈로 제출합니다</p>
+            </div>
+        </div>
+        <!-- flask end7 -->
+        <div class="js img-list">
+            <div class="activeImg"><img src="../image/js.png" alt="" /></div>
+            <div class="text">
+                <p class="title">JavaScript Study</p>
+                <p class="desc">모던 자바스크립트 딥 다이브 교재를 통해 일주일에 한 챕터씩 기술 블로그에 작성 후 깃허브 이슈로 제출합니다</p>
+            </div>
+        </div>
+        <!-- js end8 -->
+
+        <div class="swift img-list">
+            <div class="activeImg"><img src="../image/swift.png" alt="" /></div>
+            <div class="text">
+                <p class="title">Swift Study</p>
+                <p class="desc">깃허브 이슈에 있는 과제를 공부 후 기술 블로그에 작성하여 제출합니다</p>
+            </div>
+        </div>
+        <!-- swift end9 -->
+    </div>
+</div>
+<!-- container3 end -->
 </body>
 
 </html>
