:recycle: active, goal, information, notice

--- a/main/index.html
+++ b/main/index.html
@@ -10,35 +10,31 @@
 </head>
 
 <body>
-  <header>
-    <div class="logo">
-      <img src="../image/logo.png" alt="" />
-    </div>
-    <div class="menu">
-      <ul>
-        <a href="../information/information.html">
-          <li>Info</li>
+  <div class="wrapper">
+    <header>
+      <div class="logo">
+        <a href="../main/index.html">
+          <img src="../image/logo.png" alt="" />
         </a>
-        <a href="../active/active.html">
-          <li>Active</li>
-        </a>
-        <a href="../plan/plan.html">
-          <li>Goal</li>
-        </a>
-        <a href="../notice/notice.html">
-          <li>Notice</li>
-        </a>
-      </ul>
-    </div>
-  </header>
-  <!-- header end -->
-  <nav class="side-bar">
-    <div class="left"></div>
-    <div class="center">
-      <!-- this -->
-    </div>
-    <div class="right"></div>
-  </nav>
+      </div>
+      <div class="menu">
+        <ul>
+          <a href="../information/information.html">
+            <li>Info</li>
+          </a>
+          <a href="../active/active.html">
+            <li>Active</li>
+          </a>
+          <a href="../goal/goal.html">
+            <li>Goal</li>
+          </a>
+          <a href="../notice/notice.html">
+            <li>Notice</li>
+          </a>
+        </ul>
+      </div>
+    </header>
+  </div>
 </body>
 
 </html>
