--- a/active/active.html
+++ b/active/active.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
     <header>
         <div class="logo">
-            <a href="./index.html">
+            <a href="../main/index.html">
                 <img src="../image/logo.png" alt="" />
             </a>
         </div>
