--- a/goal/goal.html
+++ b/goal/goal.html
@@ -6,97 +6,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goal</title>
-    <link rel="stylesheet" href="./goal.css" />
+    <link rel="stylesheet" href="./goal.css">
     <link rel="stylesheet" href="../main/style.css">
+    <!-- <link rel="stylesheet" href="../test.css"> -->
     <script src="https://kit.fontawesome.com/34fbf3adf6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="../image/logo.png" alt="" />
-        </div>
-        <div class="menu">
-            <ul>
-                <a href="../information/information.html">
-                    <li>Info</li>
+
+    <div class="wrapper">
+        <header>
+            <div class="logo">
+                <a href="../main/index.html">
+                    <img src="../image/logo.png" alt="" />
                 </a>
-                <a href="../active/active.html">
-                    <li>Active</li>
-                </a>
-                <a href="../plan/plan.html">
-                    <li>Goal</li>
-                </a>
-                <a href="../notice/notice.html">
-                    <li>Notice</li>
-                </a>
-            </ul>
-        </div>
-    </header>
+            </div>
+            <div class="menu">
+                <ul>
+                    <a href="../information/information.html">
+                        <li>Info</li>
+                    </a>
+                    <a href="../active/active.html">
+                        <li>Active</li>
+                    </a>
+                    <a href="../goal/goal.html">
+                        <li>Goal</li>
+                    </a>
+                    <a href="../notice/notice.html">
+                        <li>Notice</li>
+                    </a>
+                </ul>
+            </div>
+        </header>
+    </div>
     <!-- header end -->
-    <nav class="side-bar">
-        <div class="left"></div>
-        <div class="center">
-            <div class="wrapper">
-                <div class="financial-app">
-                    <div class="front">
+    <div class="goal-wrapper">
+        <div class="goal-container">
+            <div class="goal-box mentoring">
+                <div class="front">
+                    <div class="goal-img">
                         <i class="fa-solid fa-user-group"></i>
+                    </div>
+                    <div class="goal-text">
                         <h2>1:1 Mentoring</h2>
                     </div>
-                    <div class="back">
-                        <h2>선배가 후배에게 1대 1일 멘토링</h2>
-                    </div>
                 </div>
-                <div class="graphic-design">
-                    <div class="front">
+                <div class="back">
+                    <h2>선배가 후배에게</h2>
+                    <h2>1대 1 멘토링</h2>
+                </div>
+            </div>
+            <div class="goal-box seminar">
+                <div class="front">
+                    <div class="goal-img">
                         <i class="fa-solid fa-chalkboard-user"></i>
+                    </div>
+                    <div class="goal-text">
                         <h2>Front Seminar</h2>
                     </div>
-                    <div class="back">
-                        <h2>HTML, CSS, JS 그리고 React까지 CRUD 구현</h2>
-                    </div>
                 </div>
-                <div class="artifact-model">
-                    <div class="front">
+                <div class="back">
+                    <h2>HTML, CSS, JS </h2>
+                    <h2>그리고 React까지</h2>
+                </div>
+            </div>
+            <div class="goal-box backend">
+                <div class="front">
+                    <div class="goal-img">
                         <i class="fa-solid fa-server"></i>
+                    </div>
+                    <div class="goal-text">
                         <h2>Add Backend Study</h2>
                     </div>
-                    <div class="back">
-                        <h2>Python뿐만 아니라 Java, Node.js까지</h2>
-                    </div>
                 </div>
-                <div class="operating-system">
-                    <div class="front">
-                        <i class="fa-solid fa-people-group"></i>
-                        <h2>Team Project</h2>
-                    </div>
-                    <div class="back">
-                        <h2>2, 3학년 한 팀이 되어 개인 스터디가 아닌 프로젝트</h2>
-                    </div>
-                </div>
-                <div class="business-card">
-                    <div class="front">
-                        <i class="fa-solid fa-microphone-lines"></i>
-                        <h2>Session</h2>
-                    </div>
-                    <div class="back">
-                        <h2>기술 면접을 위한 keyword 공부 후 발표</h2>
-                    </div>
-                </div>
-                <div class="centered-design">
-                    <div class="front">
-                        <i class="fa-solid fa-computer"></i>
-                        <h2>CS Study</h2>
-                    </div>
-                    <div class="back">
-                        <h2>알고리즘, 자료구조 책으로 기술 블로그 정리</h2>
-                    </div>
+                <div class="back">
+                    <h2>Python 뿐만 아니라 </h2>
+                    <h2>Java, Node.js까지</h2>
                 </div>
             </div>
         </div>
+    </div>
+    <!-- goal-wrapper1 end -->
+    <div class="goal-wrapper">
+        <div class="goal-container">
+            <div class="goal-box team">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-people-group"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>Team Project</h2>
+                    </div>
+                </div>
+                <div class="back">
+                    <h2>2, 3학년 한 팀이 되어 </h2>
+                    <h2>개인 스터디가 아닌 </h2>
+                    <h2>프로젝트</h2>
+                </div>
+            </div>
+            <div class="goal-box session">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-microphone-lines"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>Session</h2>
+                    </div>
+                </div>
+                <div class="back">
+                    <h2>기술 면접을 위한 </h2>
+                    <h2>keyword 공부</h2>
+                </div>
+            </div>
+            <div class="goal-box study">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-computer"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>CS Study</h2>
+                    </div>
+                </div>
+                <div class="back">
+                    <h2>알고리즘, 자료구조 </h2>
+                    <h2>책으로 기술 블로그 정리</h2>
+                </div>
+            </div>
         </div>
-        <div class="right"></div>
-    </nav>
+    </div>
+    <!-- goal-wrapper1 end -->
+
+    <!-- 구분 -->
+
+
+    <!-- 구분 -->
+
 </body>
 
 </html>
