:construction: active, information, notice

--- a/active/active.html
+++ b/active/active.html
@@ -8,6 +8,7 @@
     <title>Active</title>
     <link rel="stylesheet" href="./active.css" />
     <link rel="stylesheet" href="../main/style.css">
+    <link rel="stylesheet" href="./active-media.css">
 </head>
 <div class="wrapper">
     <header>
