--- a/information/information.html
+++ b/information/information.html
@@ -8,6 +8,7 @@
   <title>Information</title>
   <link rel="stylesheet" href="../main/style.css">
   <link rel="stylesheet" href="./information.css" />
+  <link rel="stylesheet" href="./info-media.css">
   <!-- <link rel="stylesheet" href="../test.css"> -->
 </head>
 
@@ -38,10 +39,10 @@
     </header>
     <div class="top">
       <p class="title">IFP</p>
-      <p class="desc">저희 IFP는 Information Forward Page의 줄임말로 정보 보안 목적으로 개설된 동아리였습니다</p>
-      <p class="desc">하지만 다수의 관심 분야에 따라 방향성을 달리해 다양한 분야의 스터디, 코딩 테스트 및 웹을</p>
-      <p class="desc">공부하며 함께 협업할 수 있는 프로젝트를 진행하는 동아리로 전환하였고</p>
-      <p class="desc">분야를 가리지 않고, 서로 도움을 주는 동아리로 개선하였습니다.</p>
+      <p class="desc">저희 IFP는 Information Forward Page의 줄임말로 정보 보안 목적으로 개설된 동아리였습니다.
+        하지만 다수의 관심 분야에 따라 방향성을 달리해 다양한 분야의 스터디, 코딩 테스트 및 웹을
+        공부하며 함께 협업할 수 있는 프로젝트를 진행하는 동아리로 전환하였고
+        분야를 가리지 않고, 서로 도움을 주는 동아리로 개선하였습니다.</p>
     </div>
     <div class="middle">
       <img src="../image/pro.png" class="img" alt="" />
@@ -70,14 +71,13 @@
       </div>
       <div class="main-boss">
         <img src="../image/main-boss.png" alt="" />
-
         <div class="text">
           <p class="title">부회장: 컴소과 21학번 홍유진</p>
           <p class="desc">
             초등학생 때부터 미술을 시작해 고등학생 때 미대를 준비하던 미대 입시생이었습니다. 그러나 부모님의 학과 반대에 부딪혀 인덕대 컴소과 진학했습니다.
             그래서인지 1학년 때 학과에 적응을 하지 못했고 시험을 보러 가지 않아 F가 나온 수업도 있었습니다. 그렇게 겨울 방학이 되고 편입 학원을 다니면서
             학과 휴학을 결정하였습니다. 하지만 이렇게 도망가는 것이 후회가 될 거 같아서 다시 학교로 돌아와 2학년 때 다양한 노력들을 진행하였습니다. 그 과정에서
-            IFP 동아리에 들어와 많은 것이 바뀌었습니다. 함께 하는 동료들이 생겼고 도와주는 선배들을 만나 성장했습니다. <br /><br />
+            IFP 동아리에 들어와 많은 것이 바뀌었습니다. 함께 하는 동료들이 생겼고 도와주는 선배들을 만나 성장했습니다. <br /><br /></p>
           <p class="desc">전) C언어 프로그래밍</p>
           <p class="desc">현) 컴소과 학생회 임원</p>
           <p class="desc">현) 학과 전공 동아리 IFP 부회장 </p>
