--- a/notice/notice.html
+++ b/notice/notice.html
@@ -8,6 +8,7 @@
     <title>Notice</title>
     <link rel="stylesheet" href="../main/style.css">
     <link rel="stylesheet" href="./notice.css">
+    <link rel="stylesheet" href="./notice-media.css">
 </head>
 
 <body>
