:adhesive_bandage: root directory <link> 수정

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IFP</title>
+  <link rel="stylesheet" href="./main-media.css">
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -13,22 +14,22 @@
   <div class="wrapper">
     <header>
       <div class="logo">
-        <a href="../main/index.html">
+        <a href="./index.html">
           <img src="../image/logo.png" alt="" />
         </a>
       </div>
       <div class="menu">
         <ul>
-          <a href="../information/information.html">
+          <a href="./information/information.html">
             <li>Info</li>
           </a>
-          <a href="../active/active.html">
+          <a href="./active/active.html">
             <li>Active</li>
           </a>
-          <a href="../goal/goal.html">
+          <a href="./goal/goal.html">
             <li>Goal</li>
           </a>
-          <a href="../notice/notice.html">
+          <a href="./notice/notice.html">
             <li>Notice</li>
           </a>
         </ul>
