--- a/information/information.html
+++ b/information/information.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Information</title>
-  <link rel="stylesheet" href="../main/style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./information.css" />
   <link rel="stylesheet" href="./info-media.css">
   <!-- <link rel="stylesheet" href="../test.css"> -->
@@ -16,7 +16,7 @@
   <div class="wrapper">
     <header>
       <div class="logo">
-        <a href="../main/index.html">
+        <a href="../index.html">
           <img src="../image/logo.png" alt="" />
         </a>
       </div>
