--- a/active/active.html
+++ b/active/active.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Active</title>
-    <link rel="stylesheet" href="./active.css" />
-    <link rel="stylesheet" href="../main/style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./active.css">
     <link rel="stylesheet" href="./active-media.css">
 </head>
 <div class="wrapper">
     <header>
         <div class="logo">
-            <a href="../main/index.html">
+            <a href="../index.html">
                 <img src="../image/logo.png" alt="" />
             </a>
         </div>
