--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="logo">
         <a href="./index.html">
-          <img src="../image/logo.png" alt="" />
+          <img src="./image/logo.png" alt="" />
         </a>
       </div>
       <div class="menu">
