:construction: main tada, active margin, goal size 남음

--- a/goal/goal.html
+++ b/goal/goal.html
@@ -98,8 +98,8 @@
             </div>
             <div class="back">
                 <h2>2, 3학년 한 팀이 되어 </h2>
-                <h2>개인 스터디가 아닌 </h2>
-                <h2>프로젝트</h2>
+                <h2>개인 프로젝트가 아닌 </h2>
+                <h2>팀 프로젝트 진행</h2>
             </div>
         </div>
         <div class="goal-box session">
