--- a/information/information.html
+++ b/information/information.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./information.css" />
   <link rel="stylesheet" href="./info-media.css">
+  <link rel="stylesheet" href="./sns.css">
+  <script src="https://kit.fontawesome.com/3cf4db8e74.js" crossorigin="anonymous"></script>
   <!-- <link rel="stylesheet" href="../test.css"> -->
 </head>
 
@@ -43,6 +45,11 @@
         하지만 다수의 관심 분야에 따라 방향성을 달리해 다양한 분야의 스터디, 코딩 테스트 및 웹을
         공부하며 함께 협업할 수 있는 프로젝트를 진행하는 동아리로 전환하였고
         분야를 가리지 않고, 서로 도움을 주는 동아리로 개선하였습니다.</p>
+      <section class="btn-section">
+        <a href="https://github.com/IDU-IFP"><button class="btn-git"><i class="fa-brands first-logo fa-github-alt"></i><i class="fa-brands second-logo fa-github-alt"></i></button></a>
+        <a href="https://www.notion.so/ifp-2022/IFP-54dd0ff0384c48178c3242190c8fbe3f"><button class="btn-no"><i class="fa-brands first-logo fa-neos"></i><i class="fa-brands second-logo fa-neos"></i></button></a>
+        <a href="https://github.com/IDU-IFP"><button class="btn-you"><i class="fa-brands first-logo fa-youtube"></i><i class="fa-brands second-logo fa-youtube"></i></button></a>
+      </section>
     </div>
     <div class="middle">
       <img src="../image/pro.png" class="img" alt="" />
@@ -58,7 +65,7 @@
           <p class="title">회장: 컴소과 21학번 류경혜</p>
           <p class="desc">
             진학하고 싶어 했던 학과에 떨어진 후 성적에 맞춰 인덕대 컴소과를 진학하였습니다. 학과에 적응하기 위해 멘토 멘티, 동아리 활동 그리고 성적도 열심히
-            관리해 4.5를 유지하였습니다.
+            관리해 4.4를 유지하였습니다.
             하지만 코로나로 인해 멘토 멘티, 동아리 활동, 학교생활에 제약이 많았고 그 제약 때문인지 열심히 한 것에 비해서 저한테 남는 것이 없어 번아웃이
             왔었습니다.그러다 겨울 방학 IFP 동아리에서 온라인 세미나를 진행하여 HTML & CSS를 경험해 보면서 직접 무언가를 만들 수 있다는 것이 좋았고
             세미나 덕분에 진로를 프론트엔드 개발자를 꿈꾸고 있습니다.<br /> <br />
