--- a/information/information.html
+++ b/information/information.html
@@ -48,7 +48,7 @@
       <section class="btn-section">
         <a href="https://github.com/IDU-IFP"><button class="btn-git"><i class="fa-brands first-logo fa-github-alt"></i><i class="fa-brands second-logo fa-github-alt"></i></button></a>
         <a href="https://www.notion.so/ifp-2022/IFP-54dd0ff0384c48178c3242190c8fbe3f"><button class="btn-no"><i class="fa-brands first-logo fa-neos"></i><i class="fa-brands second-logo fa-neos"></i></button></a>
-        <a href="https://github.com/IDU-IFP"><button class="btn-you"><i class="fa-brands first-logo fa-youtube"></i><i class="fa-brands second-logo fa-youtube"></i></button></a>
+        <a href="https://www.youtube.com/channel/UCaFx8Jk_qVFWY6Be_2C-31A"><button class="btn-you"><i class="fa-brands first-logo fa-youtube"></i><i class="fa-brands second-logo fa-youtube"></i></button></a>
       </section>
     </div>
     <div class="middle">
