:sparkles: favicon, 미리보기

--- a/goal/goal.html
+++ b/goal/goal.html
@@ -6,11 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goal</title>
-    <link rel="stylesheet" href="./goal-media.css">
+    <!-- <link rel="stylesheet" href="./goal-media.css"> -->
     <link rel="stylesheet" href="./goal.css">
     <link rel="stylesheet" href="../style.css">
     <!-- <link rel="stylesheet" href="../test.css"> -->
     <script src="https://kit.fontawesome.com/34fbf3adf6.js" crossorigin="anonymous"></script>
+    <!-- favicon start  -->
+    <link rel="apple-touch-icon" sizes="57x57" href="../image/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="../image/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="../image/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="../image/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="../image/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="../image/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="../image/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="../image/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../image/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="../image/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../image/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="../image/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../image/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="../image/favicon/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- favicon end -->
 </head>
 <div class="wrapper">
     <header>
@@ -38,96 +57,98 @@
     </header>
 </div>
 <!-- wrapper end -->
-<div class="goal-wrapper">
-    <div class="goal-container">
-        <div class="goal-box mentoring">
-            <div class="front">
-                <div class="goal-img">
-                    <i class="fa-solid fa-user-group"></i>
+<div class="test-cover">
+    <div class="goal-wrapper">
+        <div class="goal-container">
+            <div class="goal-box mentoring">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-user-group"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>1:1 Mentoring</h2>
+                    </div>
                 </div>
-                <div class="goal-text">
-                    <h2>1:1 Mentoring</h2>
-                </div>
-            </div>
-            <div class="back">
-                <h2>선배가 후배에게</h2>
-                <h2>1대 1 멘토링</h2>
-            </div>
-        </div>
-        <div class="goal-box seminar">
-            <div class="front">
-                <div class="goal-img">
-                    <i class="fa-solid fa-chalkboard-user"></i>
-                </div>
-                <div class="goal-text">
-                    <h2>Front Seminar</h2>
+                <div class="back">
+                    <h2>선배가 후배에게</h2>
+                    <h2>1대 1 멘토링</h2>
                 </div>
             </div>
-            <div class="back">
-                <h2>HTML, CSS, JS </h2>
-                <h2>그리고 React까지</h2>
-            </div>
-        </div>
-        <div class="goal-box backend">
-            <div class="front">
-                <div class="goal-img">
-                    <i class="fa-solid fa-server"></i>
+            <div class="goal-box seminar">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-chalkboard-user"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>Front Seminar</h2>
+                    </div>
                 </div>
-                <div class="goal-text">
-                    <h2>Add Backend Study</h2>
-                </div>
-            </div>
-            <div class="back">
-                <h2>Python 뿐만 아니라 </h2>
-                <h2>Java, Node.js까지</h2>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- goal-wrapper1 end -->
-<div class="goal-wrapper">
-    <div class="goal-container">
-        <div class="goal-box team">
-            <div class="front">
-                <div class="goal-img">
-                    <i class="fa-solid fa-people-group"></i>
-                </div>
-                <div class="goal-text">
-                    <h2>Team Project</h2>
+                <div class="back">
+                    <h2>HTML, CSS, JS </h2>
+                    <h2>그리고 React까지</h2>
                 </div>
             </div>
-            <div class="back">
-                <h2>2, 3학년 한 팀이 되어 </h2>
-                <h2>개인 프로젝트가 아닌 </h2>
-                <h2>팀 프로젝트 진행</h2>
+            <div class="goal-box backend">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-server"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>Add Backend Study</h2>
+                    </div>
+                </div>
+                <div class="back">
+                    <h2>Python 뿐만 아니라 </h2>
+                    <h2>Java, Node.js까지</h2>
+                </div>
             </div>
         </div>
-        <div class="goal-box session">
-            <div class="front">
-                <div class="goal-img">
-                    <i class="fa-solid fa-microphone-lines"></i>
+        <!-- </div> -->
+        <!-- goal-wrapper1 end -->
+        <!-- <div class="goal-wrapper"> -->
+        <div class="goal-container">
+            <div class="goal-box team">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-people-group"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>Team Project</h2>
+                    </div>
                 </div>
-                <div class="goal-text">
-                    <h2>Session</h2>
-                </div>
-            </div>
-            <div class="back">
-                <h2>기술 면접을 위한 </h2>
-                <h2>keyword 공부</h2>
-            </div>
-        </div>
-        <div class="goal-box study">
-            <div class="front">
-                <div class="goal-img">
-                    <i class="fa-solid fa-computer"></i>
-                </div>
-                <div class="goal-text">
-                    <h2>CS Study</h2>
+                <div class="back">
+                    <h2>2, 3학년 한 팀이 되어 </h2>
+                    <h2>개인 프로젝트가 아닌 </h2>
+                    <h2>팀 프로젝트 진행</h2>
                 </div>
             </div>
-            <div class="back">
-                <h2>알고리즘, 자료구조 </h2>
-                <h2>책으로 기술 블로그 정리</h2>
+            <div class="goal-box session">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-microphone-lines"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>Session</h2>
+                    </div>
+                </div>
+                <div class="back">
+                    <h2>기술 면접을 위한 </h2>
+                    <h2>keyword 공부</h2>
+                </div>
+            </div>
+            <div class="goal-box study">
+                <div class="front">
+                    <div class="goal-img">
+                        <i class="fa-solid fa-computer"></i>
+                    </div>
+                    <div class="goal-text">
+                        <h2>CS Study</h2>
+                    </div>
+                </div>
+                <div class="back">
+                    <h2>알고리즘, 자료구조 </h2>
+                    <h2>책으로 기술 블로그 정리</h2>
+                </div>
             </div>
         </div>
     </div>
