:construction: main page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
   <!-- 미리보기 끝 -->
 </head>
 <link rel="stylesheet" href="">
+<link rel="stylesheet" href="./style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="./main.css">
 
 <body>
   <div class="wrapper">
@@ -63,9 +72,21 @@
       </div>
     </header>
   </div>
-  <div class="test-div">
-    Main Page Test div
-  </div>
+  <!-- main start -->
+  <section id="mast" class="mast animate">
+    <div class="mast__header">
+      <span class="mast__icon">🌈</span>
+      <h1 class="mast__title js-letters text-animate">
+        Hello World!</h1>
+      <p class="mast__text js-letters">
+        Welcome to the IFP website. please have fun.
+      </p>
+    </div>
+  </section>
+  <button class="btn"><i class="ion-refresh"></i></button>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="./index.js"></script>
+  <!-- main end -->
 </body>
 
 </html>
