:construction: main page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h1 class="mast__title js-letters text-animate">
         Hello World!</h1>
       <p class="mast__text js-letters">
-        Welcome to the IFP website. please have fun.
+        Welcome to the IFP website.
       </p>
     </div>
   </section>
