:construction: all page

--- a/active/active.html
+++ b/active/active.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./active.css">
     <link rel="stylesheet" href="./active-media.css">
+
+    <!-- h1 start -->
+    <link rel="stylesheet" href="./title.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
+    <!-- h1 end -->
     <!-- favicon start  -->
     <link rel="apple-touch-icon" sizes="57x57" href="../image/favicon/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="../image/favicon/apple-icon-60x60.png" />
@@ -55,7 +62,16 @@
     </header>
 </div>
 <!-- wrapper end -->
+
 <div class="cover">
+    <h1>
+        <span>A</span>
+        <span>c</span>
+        <span>t</span>
+        <span>i</span>
+        <span>v</span>
+        <span>e</span>
+    </h1>
     <div class="container">
         <div class="gather img-list">
             <div class="activeImg"><img src="../image/gather.png" alt="" /></div>
