--- a/information/information.html
+++ b/information/information.html
@@ -100,10 +100,10 @@
         <div class="text">
           <p class="title">부회장: 컴소과 21학번 홍유진</p>
           <p class="desc">
-            초등학생 때부터 미술을 시작해 고등학생 때 미대를 준비하던 미대 입시생이었습니다. 그러나 부모님의 학과 반대에 부딪혀 인덕대 컴소과 진학했습니다.
+            초등학생 때부터 미술을 시작해 고등학생 때 미대를 준비하던 미대 입시생이었습니다. 그러나 부모님의 학과 반대에 부딪혀 인덕대 컴소과에 진학했습니다.
             그래서인지 1학년 때 학과에 적응을 하지 못했고 시험을 보러 가지 않아 F가 나온 수업도 있었습니다. 그렇게 겨울 방학이 되고 편입 학원을 다니면서
-            학과 휴학을 결정하였습니다. 하지만 이렇게 도망가는 것이 후회가 될 것 같아서 다시 학교로 돌아와 2학년 때 다양한 노력들을 진행하였습니다. 그 과정에서
-            IFP 동아리에 들어와 많은 것이 바뀌었습니다. 함께 하는 동료들이 생겼고 도와주는 선배들을 만나 성장했습니다. <br /><br /></p>
+            학과 휴학을 결정하였습니다. 하지만 이렇게 도망가는 것이 후회가 될 것 같아서 다시 학교로 돌아와 2학년 때 다양한 노력들을 하였습니다. 그 과정에서
+            IFP 동아리에 들어와 많은 것이 바뀌었습니다. 함께 하는 동료들이 생겼고 도와주는 선배들을 만나 성장하고 있습니다. <br /><br /></p>
           <p class="desc">전) C 프로그래밍 멘토</p>
           <p class="desc">현) 컴소과 학생회 임원</p>
           <p class="desc">현) 학과 전공 동아리 IFP 부회장 </p>
