--- a/notice/notice.html
+++ b/notice/notice.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./notice.css">
     <link rel="stylesheet" href="./notice-media.css">
+    <link rel="stylesheet" href="./title.css">
     <!-- favicon start  -->
     <link rel="apple-touch-icon" sizes="57x57" href="../image/favicon/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="../image/favicon/apple-icon-60x60.png" />
@@ -57,21 +58,19 @@
         </header>
     </div>
     <div class="cover">
-        <div class="point-box">
-            <div class="text">
-                <h3>진로를 정하지 못한 사람</h3>
-                <h3>웹에 관심있는 사람</h3>
-                <h3>가이드 라인이 필요한 사람</h3>
-                <h3>다름 사람들과 어울리며 공부하고 싶은 사람</h3>
-                <h3>선배, 동기들과 친해지고 싶은 사람</h3>
-            </div>
-            <div class="button">
-                <a href="https://forms.gle/22qfJgvYZCcAVuKK6">
-                    <h2>지원하기</h2>
-                </a>
+        <div class="content">
+            <div class="notebook-page"> <textarea id="msg"></textarea>
+                <div class="text-edit">To 여러분들에게<br /><br />진로를 정하지 못한 사람<br />웹에 관심이 있는 사람<br />다른 사람들과 어울리며 공부하고 싶은 사람<br />선배 그리고 동기들과 친해지고 싶은 사람<br /><br />ifp에 지원해주세요.<br /><br /><br /><br />From IFP</div>
             </div>
         </div>
+        <div class="button">
+            <a href="https://forms.gle/22qfJgvYZCcAVuKK6">
+                <h2>지원하기</h2>
+            </a>
+        </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="./notice.js"></script>
 </body>
 
 </html>
